--- a/public/simple_style.css
+++ b/public/simple_style.css
@@ -37,4 +37,6 @@ h1 {
   padding-left: 16pt;
   padding-top: 8pt;
   padding-bottom: 8pt;
+  font-family: "Lobster", cursive;
+  font-size: xx-large;
 }
