--- a/public/simple_style.css
+++ b/public/simple_style.css
@@ -2,41 +2,62 @@ body {
   background-color: #fafaff;
   max-width: 100vh;
   margin: auto;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  line-height: 1em;
 }
 
 a {
   text-decoration: none;
 }
+a:link {
+  color: #0645ad;
+}
+a:visited {
+  color: #4444aa;
+}
+a:hover {
+  color: #ff0000;
+}
+a:active {
+  color: #ff8000;
+}
 
 section {
-  border: solid 0.1pt;
+  border: solid 0.1px;
 
-  margin-bottom: 8pt;
-  margin-top: 8pt;
-  /* border-radius: 16px; */
+  margin-bottom: 8px;
+  margin-top: 8px;
   overflow: hidden;
+  padding-bottom: 16px;
 }
 
 div.section_wrapper {
-  padding-right: 16pt;
-  padding-left: 16pt;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 
 img {
-  border-radius: 64pt;
+  border-radius: 128px;
 }
 
 ul {
   list-style: none;
 }
 
+li {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
 h1 {
   background-color: #000011;
-  margin-top: 0pt;
+  margin-top: 0px;
   color: #fafaff;
-  padding-left: 16pt;
-  padding-top: 8pt;
-  padding-bottom: 8pt;
+  padding-left: 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-family: "Lobster", cursive;
-  font-size: xx-large;
+  font-size: 64px;
+  margin-bottom: 16px;
 }
